codepkg/objects/University__c.object
<CustomObject>
    <fields>
        <fullName>CountOfEmployees__c</fullName>
        <label>CountOfEmployees</label>
        <summaryForeignKey>Employee_uni__c.University__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CountOfStudents__c</fullName>
        <label>CountOfStudents</label>
        <summaryForeignKey>Student__c.University__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EmployeeSalarySum__c</fullName>
        <label>EmployeeSalarySum</label>
        <summarizedField>Employee_uni__c.Salary__c</summarizedField>
        <summaryForeignKey>Employee_uni__c.University__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rector__c</fullName>
        <label>Rector</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudPaymentsSum__c</fullName>
        <label>StudPaymentsSum</label>
        <summarizedField>Student__c.StudyCost__c</summarizedField>
        <summaryForeignKey>Student__c.University__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>StudScholarshipSum__c</fullName>
        <label>StudScholarshipSum</label>
        <summarizedField>Student__c.SizeOfScholarship__c</summarizedField>
        <summaryForeignKey>Student__c.University__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalProfit__c</fullName>
        <formula>StudPaymentsSum__c  -  EmployeeSalarySum__c  -  StudScholarshipSum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TotalProfit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>University</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>University Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Universities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>